entity_macros/tests/ui/attribute/conflicting-field-named-database.stderr
error: Conflicting field with same name
 --> $DIR/conflicting-field-named-database.rs:7:5
  |
7 |     database: usize,
  |     ^^^^^^^^
